# dither-lab

./: .antigravityignore  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  ROADMAP.md  TODO.md  ditherlablogo.af  package-lock.json  package.json  ui_alternatives.html  ui_component_playground.html
.cargo/: config.toml
.claude/: launch.json
.github/workflows/: ci.yml
docs/: antigravityauditreport.md
docs/audit/: 2026-05-18-code-audit.md  audit.md  codex-handoff.md  next-phases.md
docs/spec/: algorithms-and-color.md  architecture.md  blender-nodes-port.md  caddis-feature-roadmap.md  export.md  field-nodes.md  implementation-plan.md  lens-flare-node.md  per-clip-graphs.md  product.md  responsive-layout.md  shader-ingestion-plan.md  ui-and-ux.md  v2-node-graph.md  v3-timeline-editing.md
docs/yeni_mimari/: 00_uygulama_plani.md  ascii_entegrasyon.md  basement_ekstralar.md  curves_entegrasyon.md  depth_of_field_entegrasyon.md  displacement_entegrasyon.md  dither_entegrasyon.md  dither_lab_analysis.md  dither_lab_suggestions.md  (+17 more)
smoke/: algorithms.html  effects.html  nocache_server.py  seek-test.html
src/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/engine/: animation.rs  error.rs  exr.rs  frame.rs  lens_flare.rs  mod.rs  node.rs  tracker.rs  video_export.rs
src-tauri/src/engine/gpu/: mod.rs
src-tauri/src/engine/gpu/shaders/: pixelate.wgsl  posterize.wgsl  threshold.wgsl
tests/: composition.test.js  scheduler.test.js
(+134 files in other folders)
