[package]
name = "dither-lab"
version = "0.1.0"
description = "Local-first dithering studio for video, image, and EXR sequences"
authors = ["Dither Lab"]
edition = "2021"

[lib]
name = "dither_lab_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
pollster = "0.4"
wgpu = { version = "29.0.1", default-features = false, features = ["std", "wgsl", "metal", "vulkan", "gles"] }
